--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "df035f06",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the random module.\n",
-    "import random"
+    "import random\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -20,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "0.36159107468660867"
+       "0.03158188196902323"
       ]
      },
      "execution_count": 2,
@@ -41,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "7"
       ]
      },
      "execution_count": 3,
@@ -62,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "-9"
+       "5"
       ]
      },
      "execution_count": 4,
@@ -83,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "-3.451587516773065"
+       "7.681125650150655"
       ]
      },
      "execution_count": 5,
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c9ea23e8",
    "metadata": {},
    "outputs": [],
@@ -112,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "76d4c8f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-54"
+       "-27"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ce673a44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6"
+       "57"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "65e2fc4f",
    "metadata": {},
    "outputs": [],
@@ -165,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8b8bfd0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-23.388429340195515"
+       "53.04776139237424"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "8a14cc1c",
    "metadata": {},
    "outputs": [
@@ -196,7 +197,7 @@
        "90.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,29 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "b2301826",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 88.35062867,  49.70523501, -69.48593867,   1.11765954,\n",
-       "        84.96893451,  23.25815813, -52.04393939,  70.40490577,\n",
-       "        60.53826314,  -8.32242027,  46.08641101,   2.34040789,\n",
-       "       -14.5730336 ,  48.96472679, -42.3131549 , -82.51704273,\n",
-       "        76.40075466,  64.31757736,  41.96157316,  74.32403956,\n",
-       "       -65.36113202,  84.90572982, -79.38441978,  52.67342568,\n",
-       "       -40.91207744, -84.06219203, -14.35015573, -76.01008005,\n",
-       "        -7.6412693 , -41.24776458, -51.58864867, -83.92118564,\n",
-       "        84.18818969,  29.43073061, -29.50816814,  -4.30016317,\n",
-       "       -66.54579128,  80.66478744, -39.06276833,  17.52338134,\n",
-       "        61.69817697, -82.78771686,  62.65794947, -63.64785512,\n",
-       "        16.03890173, -39.83813339, -85.98009176,  15.19983818,\n",
-       "       -59.14293314, -45.40648763])"
+       "array([ 22.95367076,  51.94951732, -37.00847399,   5.59930089,\n",
+       "       -45.67179317, -79.88252565, -16.30677692, -36.05845576,\n",
+       "        14.49267174, -52.75256655,  83.27294959,  27.44412578,\n",
+       "       -17.37464597,  -3.34455351, -28.13958024,  16.41237897,\n",
+       "        41.52529784,  29.96693178, -49.36145215,   7.45307425,\n",
+       "       -28.74136816,  53.13823574, -71.00770778,  88.65263438,\n",
+       "       -79.4266899 , -64.48809411,  86.10410792, -86.57396861,\n",
+       "       -34.09302089, -11.17727798, -19.56749158,  66.7442942 ,\n",
+       "       -62.58039971,  70.03577652, -85.74950268,  86.36903276,\n",
+       "       -86.41246836,  46.21458886,  41.30729565,   5.07306049,\n",
+       "        65.43401321,  71.9532363 , -74.85010641,  56.48440067,\n",
+       "        55.03625865, -65.18377497, -45.96822874, -17.37402609,\n",
+       "        75.09964514,  39.41027584])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "2386e9eb",
    "metadata": {},
    "outputs": [],
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "6a17299d",
    "metadata": {},
    "outputs": [
@@ -259,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.3 µs ± 2.33 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "16.2 µs ± 2.46 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "2c6ad083",
    "metadata": {},
    "outputs": [
@@ -277,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.91 ms ± 225 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.8 ms ± 340 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -296,18 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "06800601",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 27.04453882, -30.20467312, -39.49389775, ...,  51.9561767 ,\n",
-       "        -9.00248205, -21.22299752])"
+       "array([-48.58911835,  26.78060616,  62.64472282, ...,  19.83289743,\n",
+       "       -18.33341567,  37.64987845])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,8 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e041cfea",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'city_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14208/1790012727.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcity_data_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcity_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mcity_data_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'city_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "city_data_df = pd.DataFrame(city_data)\n",
+    "city_data_df.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18617c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,13 +355,136 @@
     "cloudiness = city_data_df[\"Cloudiness\"]\n",
     "wind_speed = city_data_df[\"Wind Speed\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "439c2636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import linear regression from the SciPy stats module.\n",
+    "from scipy.stats import linregress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5970c018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an equal number of latitudes and temperatures.\n",
+    "lats = [42.5, 43.9, 8.1, 36.8, 79.9, 69.1, 25.7, 15.3, 12.7, 64.5]\n",
+    "temps = [80.5, 75.3, 90.9, 90.0, 40.4, 62.3, 85.4, 79.6, 72.5, 72.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e19a18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform linear regression.\n",
+    "(slope, intercept, r_value, p_value, std_err) = linregress(lats, temps)\n",
+    "# Get the equation of the line.\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "print(line_eq)\n",
+    "print(f\"The p-value is: {p_value:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45b4c55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform linear regression.\n",
+    "(slope, intercept, r_value, _,_) = linregress(lats, temps)\n",
+    "# Get the equation of the line.\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "print(line_eq)\n",
+    "print(f\"The p-value is: {p_value:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75c73fa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the regression line \"y values\" from the slope and intercept.\n",
+    "regress_values = [(lat * slope + intercept) for lat in lats]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81beff44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Matplotlib.\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Create a scatter plot of the x and y values.\n",
+    "plt.scatter(lats,temps)\n",
+    "# Plot the regression line with the x-values and the y coordinates based on the intercept and slope.\n",
+    "plt.plot(lats,regress_values,\"r\")\n",
+    "# Annotate the text for the line equation and add its coordinates.\n",
+    "plt.annotate(line_eq, (10,40), fontsize=15, color=\"red\")\n",
+    "plt.xlabel('Latitude')\n",
+    "plt.ylabel('Temp')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ba65802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform linear regression.\n",
+    "(slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
+    "\n",
+    "# Calculate the regression line \"y values\" from the slope and intercept.\n",
+    "regress_values = x_values * slope + intercept\n",
+    "\n",
+    "# Get the equation of the line.\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "\n",
+    "# Create a scatter plot of the x and y values.\n",
+    "plt.scatter(x_values,y_values)\n",
+    "# Plot the regression line with the x-values and the y coordinates based on the intercept and slope.\n",
+    "plt.plot(x_values,regress_values,\"r\")\n",
+    "# Annotate the text for the line equation and add its coordinates.\n",
+    "plt.annotate(line_eq, (10,40), fontsize=15, color=\"red\")\n",
+    "plt.title(title)\n",
+    "plt.xlabel('Latitude')\n",
+    "plt.ylabel('Temp')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a647c312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d5847e90e9f964b10075a0005d1b1c89c1e22c3089051e0bec285445f52eb4cb"
+  },
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
