--- a/WeatherPY.ipynb
+++ b/WeatherPY.ipynb
@@ -1539,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6c4f57a5",
+   "id": "0a578d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2858a27a",
+   "id": "af50d9e0",
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ae162e16",
+   "id": "501232e2",
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "fdfa2a34",
+   "id": "203d76fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1829,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bf4518c9",
+   "id": "5b136199",
    "metadata": {},
    "outputs": [
     {
@@ -1857,8 +1857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "dc9f22b4",
+   "execution_count": 59,
+   "id": "182edcd0",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "521e4043",
+   "id": "56341176",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "082dc274",
+   "id": "8895bb82",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "17826b1e",
+   "id": "696aa41c",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "81004342",
+   "id": "2be5beb3",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ac57f193",
+   "id": "9028f6f1",
    "metadata": {},
    "outputs": [
     {
@@ -2027,8 +2027,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "fad24652",
+   "execution_count": 63,
+   "id": "1e19c33a",
    "metadata": {},
    "outputs": [
     {
@@ -2049,13 +2049,14 @@
     "x_values = southern_hemi_df[\"Lat\"]\n",
     "y_values = southern_hemi_df[\"Wind Speed\"]\n",
     "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,'Linear Regression on the Southern Hemisphere \\n for Wind Speed', 'Wind Speed',(-50,35))"
+    "plot_linear_regression(x_values, y_values,\n",
+    "'Linear Regression on the Southern Hemisphere \\n for Wind Speed', 'Wind Speed',(-50,35))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0115f20d",
+   "id": "331e2c8c",
    "metadata": {},
    "outputs": [],
    "source": []
