--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,22 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8d28caf8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt5Agg\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the dependencies.\n",
+    "%matplotlib \n",
     "import pandas as pd\n",
-    "import gmaps\n",
     "import requests\n",
     "# Import the API key.\n",
-    "from config import g_key "
+    "from config import g_key \n",
+    "import gmaps\n",
+    "gmaps.configure(api_key=g_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1027aec5",
    "metadata": {},
    "outputs": [
@@ -140,7 +150,7 @@
        "4     10.81        77         100       24.32  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c9e79d46",
    "metadata": {},
    "outputs": [
@@ -173,7 +183,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7654d050",
    "metadata": {},
    "outputs": [],
@@ -196,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "01a1018b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb8b0e62bb3e4f3fb2c82e610322f627",
+       "model_id": "2908c05077b5451baba67720050aefa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "534207a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71b3e5c2250f4c7c8fa3b41e9f944ae5",
+       "model_id": "36f075674216431a86e3fe986bd182e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4ba83f08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d226d180c934afea0f5278eef61c3e4",
+       "model_id": "9c07ee534902422281defdc30d326b6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a6ed830c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118b320a00c646e6bfef9fef52848468",
+       "model_id": "e0b888be0677401a8080990d48718b2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "2d4b7965",
    "metadata": {},
    "outputs": [
@@ -342,7 +352,7 @@
      "output_type": "stream",
      "text": [
       "What is the minimum temperature you would like for your trip? 75\n",
-      "What is the maximum temperature you would like for your trip? 85\n"
+      "What is the maximum temperature you would like for your trip? 90\n"
      ]
     }
    ],
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "65c1774f",
    "metadata": {},
    "outputs": [
@@ -552,7 +562,7 @@
        "33     78.82        79          12       13.42  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,27 +576,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "7041cd77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "City_ID       120\n",
-       "City          120\n",
-       "Country       120\n",
-       "Date          120\n",
-       "Lat           120\n",
-       "Lng           120\n",
-       "Max Temp      120\n",
-       "Humidity      120\n",
-       "Cloudiness    120\n",
-       "Wind Speed    120\n",
+       "City_ID       146\n",
+       "City          146\n",
+       "Country       146\n",
+       "Date          146\n",
+       "Lat           146\n",
+       "Lng           146\n",
+       "Max Temp      146\n",
+       "Humidity      146\n",
+       "Cloudiness    146\n",
+       "Wind Speed    146\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "19995b46",
    "metadata": {},
    "outputs": [
@@ -739,7 +749,7 @@
        "33          Atuona      PF     78.82  -9.8000 -139.0333           "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "325bbd24",
    "metadata": {},
    "outputs": [],
@@ -768,140 +778,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "04565708",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n",
-      "Hotel not found... skipping.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Iterate through the DataFrame.\n",
-    "for index, row in hotel_df.iterrows():\n",
+    "for index, row in hotel_df[:5].iterrows():\n",
     "    # Get the latitude and longitude.\n",
     "    lat = row[\"Lat\"]\n",
     "    lng = row[\"Lng\"]\n",
@@ -928,7 +811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a32e39fa95346569d1f91d4e2ff217b",
+       "model_id": "7274b7d0feaf462d85aa62372f131609",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,13 +839,37 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "e0adf759",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'html_attributions': [], 'results': [{'business_status': 'OPERATIONAL', 'geometry': {'location': {'lat': -23.1206197, 'lng': -134.9687529}, 'viewport': {'northeast': {'lat': -23.1194598197085, 'lng': -134.9673886697085}, 'southwest': {'lat': -23.1221577802915, 'lng': -134.9700866302915}}}, 'icon': 'https://maps.gstatic.com/mapfiles/place_api/icons/v1/png_71/lodging-71.png', 'icon_background_color': '#909CE1', 'icon_mask_base_uri': 'https://maps.gstatic.com/mapfiles/place_api/icons/v2/hotel_pinlet', 'name': 'People ThankYou', 'opening_hours': {'open_now': True}, 'photos': [{'height': 4032, 'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/111478654089550585007\">Karen Dussud</a>'], 'photo_reference': 'Aap_uEAtqhWvtbU6cE32QtJsDIdV1vJaYcsi-VAwNZGtmji3zohq-ua9DdQFLxQKJogOcgZd4-J7pIQHDzZEBCKD_j34cRfCerIvStGRc9wJFc1LKVdM9jFF_ssGtrcZos1uqYTXqqmTLOloVPRSiR1XpBEkP6SCOQAYPD1eHrZu4bLaNVir', 'width': 3024}], 'place_id': 'ChIJnW6Jh0aIJ54RV2HnC1r0Hjw', 'plus_code': {'global_code': '5487V2HJ+QF'}, 'rating': 4.2, 'reference': 'ChIJnW6Jh0aIJ54RV2HnC1r0Hjw', 'scope': 'GOOGLE', 'types': ['lodging', 'point_of_interest', 'establishment'], 'user_ratings_total': 20, 'vicinity': 'Rikitea'}, {'business_status': 'OPERATIONAL', 'geometry': {'location': {'lat': -23.1276524, 'lng': -134.9656596}, 'viewport': {'northeast': {'lat': -23.1263721197085, 'lng': -134.9643507197085}, 'southwest': {'lat': -23.1290700802915, 'lng': -134.9670486802915}}}, 'icon': 'https://maps.gstatic.com/mapfiles/place_api/icons/v1/png_71/lodging-71.png', 'icon_background_color': '#909CE1', 'icon_mask_base_uri': 'https://maps.gstatic.com/mapfiles/place_api/icons/v2/hotel_pinlet', 'name': 'Pension Bianca & Benoit', 'photos': [{'height': 3024, 'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/102405645860592238312\">Jean-Louis GARRY</a>'], 'photo_reference': 'Aap_uECDN5ritTa2ZUzn4KwnhtdFo7UdLO129tK1fSBtU47w_KOiQrbBRxM_fv6AIeU_wg7sqFWHcIE-bf4nug388O7c5lK9OhFfryh9r0sq6tmNWqAaUsHHXYP4Tsdli_znQv06gxvaUBIuSrsUEDyXaBwkSIUGPLwkTr2n5ZsLN9OVNRAb', 'width': 4032}], 'place_id': 'ChIJib4T7laIJ54RcJ1rUHQ9KXk', 'plus_code': {'global_code': '5487V2CM+WP'}, 'rating': 4.5, 'reference': 'ChIJib4T7laIJ54RcJ1rUHQ9KXk', 'scope': 'GOOGLE', 'types': ['lodging', 'point_of_interest', 'establishment'], 'user_ratings_total': 15, 'vicinity': 'BP 19 | Archipel des Gambier, Mangareva'}, {'business_status': 'OPERATIONAL', 'geometry': {'location': {'lat': -23.1265385, 'lng': -134.9633665}, 'viewport': {'northeast': {'lat': -23.1249821697085, 'lng': -134.9625638697085}, 'southwest': {'lat': -23.1276801302915, 'lng': -134.9652618302915}}}, 'icon': 'https://maps.gstatic.com/mapfiles/place_api/icons/v1/png_71/camping-71.png', 'icon_background_color': '#4DB546', 'icon_mask_base_uri': 'https://maps.gstatic.com/mapfiles/place_api/icons/v2/camping_pinlet', 'name': 'TEKOUTU RED BEACH I DREAM', 'photos': [{'height': 640, 'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/109400836063665611136\">Dani Burgundyson</a>'], 'photo_reference': 'Aap_uEA3SqkYOvMgyBkkqY8sSc0BH50cyKmQH9mnUSd6PZhBDG-kfPpq0PdZwCeT5Z8tNXuNIdu2NMAmxgkXjd884mP7KKfmPaDM54Uvjc06uc_fN3SALrTgtQxCYYd0mVgF0_0ZEYH3i-Zrd5lnQElVX38uezkn_tgFdlSydkoDYWuy3_Rz', 'width': 1280}], 'place_id': 'ChIJ5xY8wxKJJ54R0s3iXHTHv3Y', 'plus_code': {'global_code': '5487V2FP+9M'}, 'reference': 'ChIJ5xY8wxKJJ54R0s3iXHTHv3Y', 'scope': 'GOOGLE', 'types': ['campground', 'lodging', 'park', 'point_of_interest', 'establishment'], 'vicinity': 'French Polynesia'}, {'business_status': 'OPERATIONAL', 'geometry': {'location': {'lat': -23.0902538, 'lng': -134.9372232}, 'viewport': {'northeast': {'lat': -23.08891656970849, 'lng': -134.9358720197085}, 'southwest': {'lat': -23.0916145302915, 'lng': -134.9385699802915}}}, 'icon': 'https://maps.gstatic.com/mapfiles/place_api/icons/v1/png_71/lodging-71.png', 'icon_background_color': '#909CE1', 'icon_mask_base_uri': 'https://maps.gstatic.com/mapfiles/place_api/icons/v2/hotel_pinlet', 'name': 'Pension Chez Jojo', 'photos': [{'height': 4032, 'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/102405645860592238312\">Jean-Louis GARRY</a>'], 'photo_reference': 'Aap_uEADoaRO_lvfHuhOA1DwWgLf7d_51qgnrYb2wGkReqJBN-6hFTRgJE4Ur0-vgPFyVe-ZX1gCaAFeKVzFPl11J5S9nLTnLmZvl1BMTERU91_HWHz176CgAbnzPsIfuBv3NFfpSKkkdCe2NoiTki9T9yDNmDuihYEN66x8VY-Bw00Hz9qK', 'width': 3024}], 'place_id': 'ChIJZ7Va7siHJ54Rxz2-_UBfZaY', 'plus_code': {'global_code': '5487W357+V4'}, 'rating': 4.7, 'reference': 'ChIJZ7Va7siHJ54Rxz2-_UBfZaY', 'scope': 'GOOGLE', 'types': ['lodging', 'point_of_interest', 'establishment'], 'user_ratings_total': 3, 'vicinity': 'Unnamed Road, Gambier'}], 'status': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"type\": \"lodging\",\n",
+    "    \"location\": [40, -92],\n",
+    "    \"key\": g_key}\n",
+    "requests.get(base_url, params=params)\n",
+    "print(hotels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "5a46dcb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec051fbd60af478a914377557e2c6805",
+       "model_id": "048e989e7f6c4e8182f32c52b67c750b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "39420ae3",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "4b7f1b29",
    "metadata": {},
    "outputs": [],
@@ -1018,14 +925,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "e6112d83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b21d3fb6911149a482279fd93b47deaf",
+       "model_id": "800f7088ace74343bf2415c4cbf9dfe5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1062,10 +969,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4f1c79eed0317ee5651c77388dadfdc3f107de03d664819ff068ca42e0f02d9b"
+  },
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
