--- a/API_practic.ipynb
+++ b/API_practic.ipynb
@@ -483,7 +483,7 @@
    "hash": "d5847e90e9f964b10075a0005d1b1c89c1e22c3089051e0bec285445f52eb4cb"
   },
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
